fix: node status labels

--- a/web/crux-ui/locales/en/common.json
+++ b/web/crux-ui/locales/en/common.json
@@ -127,7 +127,8 @@
   "nodeStatuses": {
     "connected": "Connected",
     "unreachable": "Unreachable",
-    "outdated": "Outdated"
+    "outdated": "Outdated",
+    "updating": "Updating"
   },
 
   "deploymentStatuses": {
