feat(crux-ui): creating the password icon in crux-ui

--- a/web/crux-ui/locales/en/common.json
+++ b/web/crux-ui/locales/en/common.json
@@ -99,6 +99,9 @@
   "project": "Project",
   "version": "Version",
 
+  "showPassword": "Show Password",
+  "hidePassword": "Hide Password",
+
   "prefix": "Prefix",
 
   "days": "{{days}} days",
