--- a/web/crux-ui/locales/en/notifications.json
+++ b/web/crux-ui/locales/en/notifications.json
@@ -13,7 +13,8 @@
   "type": {
     "discord": "Discord",
     "slack": "Slack",
-    "teams": "Microsoft Teams"
+    "teams": "Microsoft Teams",
+    "mattermost": "Mattermost"
   },
 
   "status": "Status:",
