feat: add working directory to container config

--- a/web/crux-ui/locales/en/container.json
+++ b/web/crux-ui/locales/en/container.json
@@ -12,6 +12,7 @@
 
   "common": {
     "user": "User",
+    "workingDirectory": "Working directory",
     "containerName": "Container name",
     "port": "Port",
     "exposePort": "Expose port",
