--- a/web/crux-ui/locales/en/registries.json
+++ b/web/crux-ui/locales/en/registries.json
@@ -29,7 +29,7 @@
   "tips": {
     "common": "Registries contain the images you can select to use in your Projects and Versions.",
     "v2": "Here you can add Docker API V2 compatible registries.",
-    "hub": "Here you're able to add public Docker Hub registries.",
+    "hub": "Here you're able to add public or private Docker Hub registries.",
     "gitlab": "Add your GitLab Registry.",
     "github": "Add your GitHub Registry.",
     "google": "Add your Google Registry.",
