feat(web): integrates the mattermost webhook to notifications (#877)
Co-authored-by: Levente Orban <levente.orban@dyrector.io>
Co-authored-by: Mate Vago <mate.vago.it@gmail.com>

--- a/web/crux-ui/locales/en/notifications.json
+++ b/web/crux-ui/locales/en/notifications.json
@@ -14,7 +14,8 @@
     "discord": "Discord",
     "slack": "Slack",
     "teams": "Microsoft Teams",
-    "rocket": "Rocket.Chat"
+    "rocket": "Rocket.Chat",
+    "mattermost": "Mattermost"
   },
 
   "status": "Status:",
