refactor(crux-ui): password component

--- a/web/crux-ui/locales/en/common.json
+++ b/web/crux-ui/locales/en/common.json
@@ -99,8 +99,8 @@
   "project": "Project",
   "version": "Version",
 
-  "showPassword": "Show Password",
-  "hidePassword": "Hide Password",
+  "show": "Show",
+  "hide": "Hide",
 
   "prefix": "Prefix",
 
@@ -227,6 +227,6 @@
     "description": "There is a protected deployment with the same node and prefix. Continuing the deployment could result in unexpected behaviour. Are you sure want to continue?"
   },
 
-  "imageConfig":"Image config",
-  "instanceConfig":"Container config"
+  "imageConfig": "Image config",
+  "instanceConfig": "Container config"
 }
