--- a/web/crux-ui/locales/en/common.json
+++ b/web/crux-ui/locales/en/common.json
@@ -14,6 +14,8 @@
   "resend": "Resend",
   "clear": "Clear",
   "documentation": "Documentation",
+  "public": "Public",
+  "changeCredentials": "Change credentials",
 
   "goBack": "Go back",
   "back": "Back",
