--- a/web/crux-ui/locales/en/notifications.json
+++ b/web/crux-ui/locales/en/notifications.json
@@ -31,9 +31,11 @@
 
   "events": "Send message when:",
   "eventType": {
-    "deploymentCreated": "New deployment is created",
-    "versionCreated": "New version is added",
-    "nodeAdded": "New node is added",
-    "userInvited": "New user invited to my team"
+    "deploymentStatus": "Deploy result",
+    "versionCreated": "New version added",
+    "nodeAdded": "New node added",
+    "userInvited": "New user invited",
+    "imagePushed": "Registry image push",
+    "imagePulled": "Registry image pull"
   }
 }
