--- a/web/crux-ui/locales/en/tokens.json
+++ b/web/crux-ui/locales/en/tokens.json
@@ -3,5 +3,6 @@
   "newToken": "New token",
   "revoke": "Revoke token",
   "areYouSureRevoke": "Are you sure you want to revoke the token?",
-  "expirationIn": "Expiration in"
+  "expirationIn": "Expiration in",
+  "jwtToken": "JWT token"
 }
