feat(crux-ui): reorganize the menu structure

--- a/web/crux-ui/locales/en/common.json
+++ b/web/crux-ui/locales/en/common.json
@@ -27,8 +27,9 @@
   "log": "Log",
 
   "home": "Home",
-  "settings": "Settings",
   "components": "Components",
+  "integrations": "Integrations",
+  "tools": "Tools",
 
   "logout": "Log out",
 
