feat(web): add subpath for v2 registries

--- a/web/crux-ui/locales/en/registries.json
+++ b/web/crux-ui/locales/en/registries.json
@@ -10,6 +10,7 @@
   "pat": "Personal access token",
   "accessToken": "Access token",
   "url": "URL",
+  "subpath": "Subpath",
   "orgOrUser": "Organization name or username",
   "organization": "Organization name",
   "group": "Group ID",
