feat: separate UI & API option to be disabled

--- a/web/crux-ui/locales/en/404.json
+++ b/web/crux-ui/locales/en/404.json
@@ -1,5 +1,5 @@
 {
-    "oops": "Opps, it's empty in here.",
+    "oops": "Oops, it's empty in here.",
     "nothingYet": "Seems like there's nothing in this page yet.",
 
     "notFound": "Not found"
