feat: full width container config layout

--- a/web/crux-ui/locales/en/container.json
+++ b/web/crux-ui/locales/en/container.json
@@ -25,7 +25,7 @@
     "portBinding": "Port binding",
     "volumes": "Volumes",
     "capabilities": "Capabilities",
-    "name": "Name",
+    "name": "Container Name",
     "size": "Size",
     "path": "Path",
     "class": "Class (k8s)",
