--- a/web/crux-ui/locales/en/settings.json
+++ b/web/crux-ui/locales/en/settings.json
@@ -13,5 +13,7 @@
   "onboarding": "Onboarding tips",
   "connect": "Connect",
   "remove": "Remove",
+  "orConnectWith": "Or connect with",
+  "connectYourAccount": "Connect your account",
   "areYouSureWantToRemoveAccount": "Are you sure you want to remove your {{account}} account connection?"
 }
